// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCount component should render a tag count of 11 1`] = `
<div
  className="ins-c-tagCount"
  onClick={[Function]}
>
  <i
    className="fas fa-tag"
  />
  <span>
    11
  </span>
  <TagModal
    modalOpen={false}
    systemName="paul.localhost.com"
  />
</div>
`;

exports[`TagCount component should render a tag count with no value 1`] = `
<div
  className="ins-c-tagCount"
  onClick={[Function]}
>
  <i
    className="fas fa-tag"
  />
  <span>
    2
  </span>
  <TagModal
    modalOpen={false}
  />
</div>
`;
